rgr/mult.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
  - name: busybox
    image: busybox:latest
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh", "-c"]
    args:
      - |
        echo "Hostname: $(hostname)"
        echo "I am the busybox container"
        sleep 3600
    stdin: true
    tty: true

  - name: nginx
    image: nginx:alpine
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80

  restartPolicy: Never
